--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,8 @@ ul {
 }
 
 .header-logo,
-.schedule-title {
+.schedule-title,
+.importance-title {
     font-weight: 500;
     font-size: 24px;
     color: var(--first-accent-color);
@@ -350,7 +351,6 @@ ul {
 }
 
 .schedule-block {
-    /* position: relative; */
     display: flex;
     height: 140px;
     padding: 0 24px;
@@ -379,9 +379,7 @@ ul {
     padding-left: 13px;
 }
 
-.background-icon::before,
-.background-icon::before,
-.background-icon::before {
+.schedule-background-icon::before {
     position: absolute;
     top: -7px;
     left: 0;
@@ -395,6 +393,7 @@ ul {
 
 .schedule-item-title {
     padding: 0 0 14px 29px;
+    font-weight: 400;
     font-size: 18px;
     color: var(--title-color);
 }
@@ -419,4 +418,58 @@ ul {
 
 .schedule-button {
     width: 137px;
+}
+
+/* ----------------------------------------------- */
+
+.importance-title {
+    margin: 80px 0 16px 0;
+    color: var(--title-color);
+}
+
+.importance-text {
+    width: 495px;
+    margin-bottom: 75px;
+    font-size: 16px;
+    line-height: 2.5;
+}
+
+.importance-list {
+
+    display: flex;
+    padding: 0 24px;
+    justify-content: space-between;
+}
+
+.importance-item {
+    position: relative;
+
+}
+
+.importance-icon {
+    padding-left: 10px;
+}
+
+.importance-background-icon {
+    position: absolute;
+    top: -10px;
+    left: 0;
+    content: "";
+    width: 40px;
+    height: 40px;
+    background-color: var(--picture-background-color);
+    border-radius: 10px;
+    z-index: -1;
+}
+
+.importance-item-title {
+    padding: 24px 0;
+    font-weight: 400;
+    font-size: 18px;
+    color: var(--title-color);
+}
+
+.importance-item-text {
+    width: 200px;
+    line-height: 1.71;
 }
